# GH

./: .gitignore  build.sh  pyproject.toml  render.yaml  test.py
GH/: asgi.py  settings.py  urls.py  wsgi.py
assets/: google_lakecity (1).ipynb
main/: admin.py  context_processors.py  forms.py  models.py  pydantic_models.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_trashticket_last_seen.py
static/css/: index-fDBeApx4.css
templates/main/: index.html  index1.html  live_map.html  registry.html
